--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.8",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "mongoose-autopopulate": "^1.0.1",
     "reflect-metadata": "^0.1.13",
